syntax = "proto3";

package v2ray.core.proxy.vmess.inbound;
option csharp_namespace = "V2Ray.Core.Proxy.Vmess.Inbound";
option go_package = "github.com/Shadowsocks-NET/v2ray-go/v4/proxy/vmess/inbound";
option java_package = "com.v2ray.core.proxy.vmess.inbound";
option java_multiple_files = true;

import "common/protocol/user.proto";

message DetourConfig {
  string to = 1;
}

message DefaultConfig {
  uint32 level = 2;
}

message Config {
  repeated v2ray.core.common.protocol.User user = 1;
  DefaultConfig default = 2;
  DetourConfig detour = 3;
  bool secure_encryption_only = 4;
}
